[package]
name = "rollups-server"
license = "Apache-2.0"
version = "0.1.0"
authors = ["victornogueira <victor.nogueira@cartesi.io>"]
edition = "2018"

[[bin]]
name = "rollups-server-main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-subscriber = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
configuration = { git = "https://github.com/cartesi/offchain-utils", rev = "38342b0" }
state-fold = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }
state-server-grpc = { git = "https://github.com/cartesi/state-fold", rev = "64f9c0e" }
offchain = { path = "../offchain" }
outputserver = { path = "../outputserver" }

ethers = { version = "0.5.3" }

serde_json = "1.0"
snafu = "0.6"
tokio = { version = "^1.5", features = ["sync", "macros", "rt-multi-thread"] }
tonic = "0.4"
serde = "1.0.0"

[build-dependencies]
ethers = { version = "0.5.3" }
serde_json = "1.0"
offchain = { path = "../offchain" }
