[package]
name = "server-manager-broker-proxy"
license = "Apache-2.0"
version = "0.8.2"
edition = "2021"

[[bin]]
name = "server-manager-broker-proxy"
path = "src/main.rs"

[dependencies]
rollups-events = { path = "../rollups-events" }

anyhow = "1.0"
axum = "0.5"
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4"
prost = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["rc", "derive"] }
sha3 = { version = "0.10", features = ["std"] }
snafu = "0.7"
tokio = { version = "1.21", features = ["macros", "time", "rt-multi-thread"] }
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
env_logger = "0.9"
test-log = { version = "0.2", features = ["trace"] }
