[package]
name = "state-server"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "cartesi-rollups-state-server"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }
state-fold = { path = "../state-fold" }
state-fold-types = { path = "../state-fold-types"}

serde.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
tonic.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
url.workspace = true
