[package]
name = "test-fixtures"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
grpc-interfaces = { path = "../grpc-interfaces" }
rollups-data = { path = "../data" }
rollups-events = { path = "../rollups-events" }

anyhow.workspace = true
backoff = { workspace = true, features = ["tokio"] }
hyper = { workspace = true, features = ["http1", "runtime", "client"] }
json.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic.workspace = true
tracing.workspace = true
users.workspace = true
