[package]
name = "types"
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[dependencies]
contracts = { path = "../contracts" }
state-fold = { path = "../state-fold" }
state-fold-types = { path = "../state-fold-types", features = ["ethers"] }

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
im = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc"] }

[dev-dependencies]
serde_json.workspace = true
