[package]
name = "types"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
contracts = { path = "../contracts" }

anyhow.workspace = true
async-trait.workspace = true
eth-state-fold-types = { workspace = true, features = ["ethers"] }
eth-state-fold.workspace = true
futures.workspace = true
im = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc"] }

[dev-dependencies]
serde_json.workspace = true
